# serverless-python-telegram-bot-yc

./: .env.example  .gitignore  config.py  context.py  deploy-to-yc.sh  local_run.py  main.py  pyproject.toml  readme.md  requirements.txt
